@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-25-11
+DATE: 05/06/2025
+STAFF: lec
+change tar of INPUTDIR -> cp -r
+
 TAG: littriageload-6-0-25-10
 DATE: 05/01/2025
 STAFF: lec
